cambios en el angularjson para despliegue

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,6 @@
             "styles": [
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-
             ],
             "scripts": []
           },
@@ -45,7 +44,8 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/wayuu-craft/"
             },
             "development": {
               "optimization": false,
@@ -91,7 +91,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/wayuu-craft/"
+          }
         }
       }
     }
